--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 /MobileTest/Library
 /MobileTest/Logs
 /MobileTest/UserSettings
+/Unity Mobile/Library
+/Unity Mobile/Temp/Burst/burst-aot18xs6qsf.ot2
+/Unity Mobile/Temp/Burst/burst-aot4htkmi10.7dr
+/Unity Mobile/Temp
+/Unity Mobile/obj/Debug
+/Unity Mobile/UserSettings
+/Unity Mobile/Logs
